# PyZapline_plus

./: .gitignore  404.html  CHANGELOG.md  CONTRIBUTING.md  LICENSE  PROJECT_TRANSFORMATION_SUMMARY.md  README.md  RELEASING.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml  spec-file.txt
.github/workflows/: ci.yml  docs.yml  publish.yml  test.yml
about/changelog/: index.html
about/citation/: index.html
about/license/: index.html
api/core/: index.html
api/noise-detection/: index.html
api/utilities/: index.html
comparisons/real_dataset/: README.md  run_real_data_sanity.py
developer-guide/contributing/: index.html
developer-guide/development/: index.html
developer-guide/release/: index.html
docs/: index.md
docs/about/: changelog.md  citation.md  license.md
docs/api/: core.md  noise-detection.md  utilities.md
docs/developer-guide/: contributing.md  development.md  release.md
docs/user-guide/: examples.md  installation.md  mne-integration.md  quickstart.md
examples/: mne_eegbci_demo.py
pyZapline_plus/: analytics.py  cleaning.py  core.py  create_test_date.py  noise_detection.py  pyzaplineplus.py  segmentation.py  test_data.mat  test_data.py  test_joy_EEG.set:Zone.Identifier  visualization.py
pyzaplineplus/: __init__.py  _mne.py  _version.py  core.py  noise_detection.py
pyzaplineplus/integration/: mne.py
search/: search_index.json
tests/: __init__.py  test_guards_and_regcov.py  test_mne_adapter.py  test_noise_detection.py  test_parity_matlab.py  test_psd_helper.py  test_pyzaplineplus.py
user-guide/examples/: index.html
user-guide/installation/: index.html
user-guide/mne-integration/: index.html
user-guide/quickstart/: index.html
